<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_add_promo"
        android:icon="@drawable/ic_add_beer_black"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_monitoramento"
        android:icon="@drawable/ic_star"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil_black"
        android:title="@string/title_perfil"
        />


</menu>
